web/src/pages/chat/styles.css
.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.chat-container {
  display: flex;
  height: 500px;
  max-width: 399px;
  width: 100%;
  flex-direction: column;
  background-color: #fff;
  justify-content: space-between;
  align-items: center;
  border-radius: 5px;

  box-shadow: 4px 2px 5px rgba(0, 0, 0, 0.2);
}

.messages-container {
  width: 100%;
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: baseline;
}

.send-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: space-between;
  width: 100%;
  height: 40px;
  border-top: 1px solid #ccc;
}

.send-container > input {
  display: flex;
  flex-direction: row;
  height: 39px;
  width: 100%;
  border-width: 0;
  background-color: #fff;
  border-radius: 5px;
  padding: 10px;
}

.send-container button {
  background: #fff;
  border: 0;
  border-left: 1px solid #ccc;
  border-bottom-right-radius: 5px;
  width: 50px;

  cursor: pointer;
}

.send-container button:hover {
  background-color: #eee;
}

.message-text {
  font-family: Ubuntu, -apple-system, Arial, Helvetica, sans-serif;
  font-size: 20;
  color: #777;
}

.message-text + p {
  padding-top: 5px;
}

